[package]
name = "wiki_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.16"
kuchiki = "0.8.1"
flate2 = "1.0.24"
indicatif = "0.17.0"
rayon = "1.5.3"
sled = "0.34.7"
bincode = "1.3.3"
bee_herder = { path = "../bee_herder" }
zim = { path = "../zim" }